# stone-cunning

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml
core/: Cargo.toml
core/src/: lib.rs  utils.rs
libdwarf/: Cargo.toml
libdwarf/examples/: termion.rs
libdwarf/examples/demo/: main.rs  renderer.rs
libdwarf/examples/planner/: main.rs
libdwarf/examples/resources/: actions.ron
libdwarf/src/: actions.rs  config.rs  lib.rs  main.rs  map.rs  planner.rs  tasks.rs  trigger.rs  world.rs
libdwarf/src/actors/: mod.rs
libdwarf/src/components/: mod.rs  object.rs  resource.rs  worker.rs
libdwarf/src/entities/: mod.rs  object.rs  resource.rs  worker.rs
libdwarf/src/objects/: mod.rs
libdwarf/src/resources/: map.rs  mod.rs  task_queue.rs  time.rs
libdwarf/src/systems/: assign_task.rs  mod.rs  object_sim.rs  time_tick.rs  worker.rs  worker_sim.rs  world.rs  world_sim.rs
libdwarf/src/world/: display.rs  mod.rs
libpath/: Cargo.toml  README.md
libpath/examples/: basic_pathing.rs  main.rs
libpath/src/: lib.rs
libterrain/: Cargo.toml  README.md
libterrain/examples/: image.rs
libterrain/src/: chunk.rs  generator.rs  lib.rs  poisson.rs
libterrain/tests/: test_loader.rs
resources/: bindings.ron  config.ron  display_config.ron  sim_config.ron
resources/assets/player/: player_spritesheet.ron
resources/data/: actions.ron  resources.ron
resources/shaders/compiled/: iso.frag.spv  iso.vert.spv
resources/shaders/fragment/: sprite.frag
resources/shaders/src/: iso.vert
resources/shaders/vertex/: sprite.vert
resources/textures/: spritesheet.ron
resources/textures/cursor/: spritesheet.ron
resources/textures/npc/: spritesheet.ron
resources/textures/objects/: spritesheet.ron
resources/textures/player/: spritesheet.ron
resources/textures/terrain/: spritesheet.ron
resources/ui/: debug.ron  menu.ron  toolbar.ron
src/: main.rs
src/game/: config.rs  entity.rs  map.rs  math.rs  mod.rs  state.rs  utils.rs
src/game/components/: camera.rs  cursor.rs  mod.rs  player.rs  terrain.rs
src/game/entity/: cursor.rs  mod.rs  npc.rs  player.rs  terrain.rs
src/game/render/: iso.rs  map.rs  mod.rs  pod.rs  sprite.rs  terrain.rs
src/game/render/pass/: iso.rs  mod.rs  sprite.rs  terrain.rs
src/game/resources/: map.rs  mod.rs
src/game/sprite/: mod.rs
src/game/state/: init.rs  mod.rs  running.rs
src/game/state/menu/: mod.rs
src/game/systems/: click.rs  cursor.rs  map_movement.rs  mod.rs  npc_movement.rs  npc_sim.rs  object_sim.rs  player_movement.rs  render_npc.rs  render_object.rs
src/game/systems/camera/: map_movement.rs  mod.rs  rotate.rs  viewshed.rs  zoom.rs
src/game/systems/debug/: mod.rs  path.rs
src/game/systems/render/: mod.rs  npc.rs  object.rs  sorting.rs  terrain.rs
src/game/systems/ui/: debug.rs
