[package]
name = "stone-cunning"
version = "0.1.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
objc = "0.2.7"
rand = "0.7.3"
serde = "1.0.104"
specs-derive = "0.4.1"
core = { path = "core" }
# Simulation code
libdwarf = { path = "libdwarf" }
# Terrain generation
libterrain = { path = "libterrain" }

[dependencies.amethyst-imgui]
# Using forked repo until mainline is updated to amethyst 0.15
git = "https://github.com/a5huynh/amethyst-imgui"
# version = "0.6.1"
# amethyst-imgui by default uses vulkan, however since we
# primarily work in OSX, we need to turn this off.
default-features = false

[workspace]
members = [
    # Core utilities used across all packages.
    'core',
    # Worker/object sim.
    'libdwarf',
    # Terrain/biome generation.
    'libterrain',
    # Pathing library
    'libpath',
]

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
debug = true
incremental = true