[package]
name = "stone-cunning"
version = "0.1.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
edition = "2018"
publish = false

[build-dependencies]
shaderc = "0.5.0"

[dependencies]
failure = "0.1.5"
glsl-layout = "0.3.2"
lazy_static = "1.4.0"
objc = "0.2.7"
rand = "0.7.3"
serde = "1.0.104"
specs-derive = "0.4.1"
core = { path = "core" }
# Simulation code
libdwarf = { path = "libdwarf" }
# Terrain generation
libterrain = { path = "libterrain" }

[dependencies.amethyst-imgui]
version = "0.7.0"
# amethyst-imgui by default uses vulkan, however since we
# primarily work in OSX, we need to turn this off.
default-features = false

[workspace]
members = [
    # Core utilities used across all packages.
    'core',
    # Worker/object sim.
    'libdwarf',
    # Terrain/biome generation.
    'libterrain',
    # Pathing library
    'libpath',
]

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
debug = true
incremental = true