[package]
name = "libdwarf"
version = "0.1.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
edition = "2018"

[dependencies]
ron = "0.5.1"
serde = "1.0.101"
specs-derive = "0.4.0"
core = { path = "../core" }
libterrain = { path = "../libterrain" }
libpath = { path = "../libpath" }

[dev-dependencies]
crossterm = "0.11"