[package]
name = "libdwarf"
version = "0.1.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
edition = "2018"

[dependencies]
ron = "0.5.1"
serde = "1.0.104"
specs-derive = "0.4.1"
core = { path = "../core" }
libterrain = { path = "../libterrain" }
libpath = { path = "../libpath" }

[dev-dependencies]
crossterm = "0.11"